# cpp-lcurve

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  bootstrap  configure.ac  pyinstall
doc/: Doxyfile.in  Makefile.am  docgen.in  example_data_file  example_model_file  geometry.tex  guide.html  style.css
include/: Makefile.am  trm_lcurve.h
include/trm/: lcurve.h
m4/: pgplot.m4
scripts/: tsigma.py
src/: Makefile.am  comp_gravity.cc  comp_light.cc  comp_radius.cc  disc_eclipse.cc  dummy.cc  fitter.cc  levmarq.cc  libpylcurve.cc  light_curve_comp.cc  lprofile.cc  lroche.cc  numface.cc  picture.cc  pos_disc.cc  pylight_curve_comp.cc  re_scale.cc  rotprof.cc  set_bright_spot_grid.cc  set_disc_continuum.cc  set_disc_grid.cc  set_star_continuum.cc  set_star_emission.cc  set_star_grid.cc  simplex.cc  star_eclipse.cc  trm_lcurve.cc  visualise.cc
